--- a/FrontEnd/src/Pages/Login/login.scss
+++ b/FrontEnd/src/Pages/Login/login.scss
@@ -205,3 +205,18 @@
         opacity: 0.8;
     }
 }
+.loginButton{
+    width: 150px;
+    padding: 15px 25px;
+    border-radius: 5px;
+    color: white;
+    display: flex;
+    align-items: center;
+    font-weight: bold;
+    margin-bottom: 20px;
+    cursor: pointer;
+  }
+
+  .google{
+    background-color: #df4930;
+  }
