--- a/FrontEnd/src/Pages/Register/register.scss
+++ b/FrontEnd/src/Pages/Register/register.scss
@@ -1,207 +1,180 @@
-.regis-header{
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-    color: var(--primary-color);
-}
-.regis-title{
-    display: flex;
-    align-items: center;
-    gap: 8px;
-}
-.regis-title__icon{
-    width: 60px;
-    height: 60px;
-}
-.regis-title>span{
-    font-weight: 500;
-    font-size: 3.6rem;
-}
-.regis-help{
-    font-size: 2.4rem;
-    font-weight: 500;
-    cursor: pointer;
-
-    &:hover{
-        opacity: 0.8;
-    }
-}
-.regis-body{
+.register-Container{
+    background: url("../../../public/Img/pic.png") no-repeat;
+    object-fit: cover;
+    height: 1024px;
+    background-size: 1440px 1024px;
     display: flex;
     justify-content: center;
-    background-color: rgba(247,117,36,0.5);
-    margin: 10px 0 50px 0;
 }
-.regis-form{
+.register-Content{
     width: 100%;
-    max-width: 1240px;
-    display: flex;
-    justify-content: center;
-    background-color: rgba(247,117,36,0.8);
-    padding: 60px;
-    gap: 100px;
-    border: 1px solid #000;
+    max-width: 1280px;
 }
-.regis-img{
-    width: 500px;
-    height: 542px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    background-color: #fff;
-    flex-direction: column;
-    border: 2px solid #000;
-    border-radius: 15px;
-    box-shadow: 6px 6px 5px rgba(0,0,0,0.5);
-}
-.img-icon{
-    
-    height: 300px;
-    width: 300px;
-    color: var(--primary-color);
-}
-.star{
-    height: 40px;
-    width: 40px;
-    color: var(--primary-color);
-    margin-right: 16px;
-}
-.regis-formBody{
-    width: 500px;
-    height: 542px;
+.register-header{
     display: flex;
     justify-content: space-between;
-    flex-direction: column;
-    border: 2px solid #000;
-    border-radius: 15px;
-    box-shadow: 6px 6px 5px rgba(0,0,0,0.5);
-    background-color: #fff;
+    align-items: center;
+    color: var(--primary-color);
+    padding-top: 16px;
+}
+.register-title{
+    display: flex;
+    align-items: center;
+    gap: 15px;
+}
+.register-title__name{
+    font-size: 2.4rem;
+    color: var(--sub-color);
+    cursor: pointer;
+}
+.active{
     color: var(--primary-color);
 }
-.regis-formTitle{
-    height: 80px;
-    width: 100%;
-    display: flex;
-    align-items: center;
-
-}
-.regis-formTitle__log{
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    width: 50%;
-    height: 100%;
+.register-title__line{
     font-size: 3.2rem;
-    font-weight: 500;
-    color: rgba(247,117,36,0.5);
-    border-right: 2px solid rgba(0,0,0,0.5);
-    border-bottom: 2px solid rgba(0,0,0,0.5);
-    cursor: pointer;
 }
-.regis-formTitle__regis{
+.register-logo{
+    width: 80px;
+    object-fit: cover;
+}
+.register-body{
     display: flex;
-    width: 50%;
-    height: 100%;
-    font-size: 3.2rem;
-    font-weight: 500;
-    text-decoration: underline;
+    justify-content: right;
+    align-content: center;
+    margin-top: 90px;
+}
+.register-form{
+    width: 500px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    flex-direction: column;
+    border-radius: 15px;
+    background-color: #fff;
+    color: #000;
+    font-family: 'Raleway';
+    padding: 0 24px;
+}
+.register-formTitle{
+    display: flex;
     justify-content: center;
     align-items: center;
-    cursor: pointer;
+    margin: 16px 0 40px 0;
+    font-size: 3.2rem;
+}
+.formControl-Container{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 420px;
+    gap: 15px;
 }
 .formControl{
     margin: 0 24px;
-}
-.formControl-User{
-    margin-bottom: 5px;
     display: flex;
-    align-items: center;
-    gap: 5px;
+    flex-direction: column;
+    gap: 20px;
 }
-.formControl-input{
-    width: 100%;
-    padding: 16px;
-    outline: none;
-    border: 1px solid rgba(0,0,0,0.25);
-    box-shadow: 4px 4px 4px rgba(0,0,0,0.25);
-    border-radius: 5px;
-}
-.regis-sumbitBtn{
-    margin: 0 24px;
-    padding: 24px 0;
-    background-color: var(--primary-color);
-    color: #fff;
-    filter: drop-shadow(4px 4px 5px rgba(247, 117, 36 , 0.5));
+
+.formControl-account>input{
     border: none;
-    border-radius: 5px;
-    cursor: pointer;
-
-    &:hover{
-        opacity: 0.8;
-    }
+    outline: none;
+    width: 420px;
+    height: 28px;
+    padding: 10px 0;
+    font-size: 2rem;
+    color: rgba(0, 0, 0, 0.5);
+    border-bottom: 1px solid rgba(0, 0, 0, 0.5);
+    background-color: transparent;
+    margin-bottom: 4px;
 }
-.regis-formHelp{
-    margin: 0 24px;
+.formControl-Remind{
     display: flex;
-    justify-content: space-between;
     align-items: center;
+    justify-content: flex-start;
 }
-.regis-remember>input{
+.formControl>button{
+    height: 60px;
+    width: 100%;
+    background: rgba(0, 0, 0, 0.5);
+    border-radius: 50px;
+    border: none;
+    font-size: 2.6rem;
+    color: rgba(255, 255, 255, 0.5);
+    
+
+    &:hover{
+        cursor: pointer;
+        opacity: 0.8;
+    }
+}
+.formControl-policy{
+    width: 100%;
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    color: #000;
+    font-size: 1.6rem;
+}
+.register-check{
+    display: flex;
+    justify-content: center;
+}
+.register-check>input{
     margin-right: 5px;
-    height: 16px;
-    width: 16px;
+    accent-color: #000;
+    border-radius: 5px;
+    width: 20px;
+    height: 20px;
+    padding: 5px 5px ;
 }
-.regis-remember>span{
-    font-size: 2rem;
-    font-weight: 500;
+.register-check>span{
+    font-size: 1.4rem;
 }
-.regis-forgot{
-    font-size: 2rem;
-    font-weight: 500;
+.register-forgot{
     cursor: pointer;
 
     &:hover{
         opacity: 0.8;
     }
 }
-.regis-formregis{
+.register-FormStyle{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 10px;
+}
+.registerForm-name{
+    font-family: 'Bismarck';
+    font-size: 4rem;
+    color: var(--primary-color);
+    width: 44px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.registerForm-line{
+    width: 180px;
+    border: 1px solid rgba(0, 0, 0, 0.5);
+}
+.register-formLog{
     display: flex;
     justify-content: center;
     align-items: center;
     gap: 5px;
-    margin-bottom: 16px;
+    margin: 18px 0 32px 0;
 }
-.regis-formregis>span{
-    font-size: 2rem ;
-    font-weight: 500;
-
-
-    &:nth-child(1){
-        color: rgba(247, 117, 36 , 0.75);
-    }
+.register-formLog>span{
+    font-size: 1.6rem ;
+    color: #000;
 
     &:nth-child(2){
+        text-decoration: underline;
         cursor: pointer;
 
         &:hover{
             opacity: 0.8;
         }
-    }
-}
-.regis-listDev{
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-    color: var(--primary-color);
-    margin-bottom: 36px;
-}
-.itemDev{
-    display: flex;
-    align-items: center;
-    gap: 5px;
-    cursor: pointer;
-
-    &:hover{
-        opacity: 0.8;
     }
 }
