--- a/FrontEnd/src/Components/GlobalStyles/globalStyles.scss
+++ b/FrontEnd/src/Components/GlobalStyles/globalStyles.scss
@@ -1,8 +1,9 @@
 @import 'normalize.css';
-@import url('https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@300;400;500;600;700&display=swap');
-
+@import url('https://fonts.googleapis.com/css2?family=ABeeZee&family=Raleway:wght@400;500;600;700&display=swap');
+@import url('https://fonts.cdnfonts.com/css/bismarck');
 :root{
-    --primary-color: #F77524;
+    --primary-color: #DC5B0E;
+    --sub-color : #EE9533;
 }
 
 *{
@@ -17,6 +18,6 @@ html{
 }
 
 body{
-    font-family: 'Source Sans Pro', sans-serif;
+    font-family: 'ABeeZee';
     font-size: 1.6rem;
 }
