--- a/FrontEnd/src/Pages/Login/login.scss
+++ b/FrontEnd/src/Pages/Login/login.scss
@@ -1,186 +1,176 @@
+.login-Container{
+    background: url("../../../public/Img/pic.png") no-repeat;
+    object-fit: cover;
+    height: 1024px;
+    background-size: 1440px 1024px;
+    display: flex;
+    justify-content: center;
+}
+.login-Content{
+    width: 100%;
+    max-width: 1280px;
+}
 .login-header{
     display: flex;
-    justify-content: space-around;
+    justify-content: space-between;
     align-items: center;
     color: var(--primary-color);
+    padding-top: 16px;
 }
 .login-title{
     display: flex;
     align-items: center;
-    gap: 8px;
+    gap: 15px;
 }
-.login-title__icon{
-    width: 60px;
-    height: 60px;
-}
-.login-title>span{
-    font-weight: 500;
-    font-size: 3.6rem;
-}
-.login-help{
+.login-title__name{
     font-size: 2.4rem;
-    font-weight: 500;
-    cursor: pointer;
-
-    &:hover{
-        opacity: 0.8;
-    }
+    color: var(--sub-color);
+}
+.active{
+    color: var(--primary-color);
+}
+.login-title__line{
+    font-size: 3.2rem;
+}
+.login-logo{
+    width: 80px;
+    object-fit: cover;
 }
 .login-body{
     display: flex;
-    justify-content: center;
-    background-color: rgba(247,117,36,0.5);
-    margin: 10px 0 50px 0;
+    justify-content: right;
+    align-content: center;
+    margin-top: 90px;
 }
 .login-form{
-    width: 100%;
-    max-width: 1240px;
-    display: flex;
-    justify-content: center;
-    background-color: rgba(247,117,36,0.8);
-    padding: 60px;
-    gap: 100px;
-    border: 1px solid #000;
-}
-.login-img{
     width: 500px;
-    height: 542px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    background-color: #fff;
-    flex-direction: column;
-    border: 2px solid #000;
-    border-radius: 15px;
-    box-shadow: 6px 6px 5px rgba(0,0,0,0.5);
-}
-.img-icon{
-    
-    height: 300px;
-    width: 300px;
-    color: var(--primary-color);
-}
-.star{
-    height: 40px;
-    width: 40px;
-    color: var(--primary-color);
-    margin-right: 16px;
-}
-.login-formBody{
-    width: 500px;
-    height: 542px;
     display: flex;
     justify-content: space-between;
+    align-items: center;
     flex-direction: column;
-    border: 2px solid #000;
     border-radius: 15px;
-    box-shadow: 6px 6px 5px rgba(0,0,0,0.5);
     background-color: #fff;
-    color: var(--primary-color);
+    color: #000;
+    font-family: 'Raleway';
+    padding: 0 24px;
 }
 .login-formTitle{
-    height: 80px;
-    width: 100%;
     display: flex;
-    align-items: center;
-
-}
-.login-formTitle__log{
-    display: flex;
-    width: 50%;
-    height: 100%;
-    font-size: 3.2rem;
-    font-weight: 500;
-    text-decoration: underline;
     justify-content: center;
     align-items: center;
-    cursor: pointer;
-}
-.login-formTitle__regis{
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    width: 50%;
-    height: 100%;
+    margin: 16px 0 40px 0;
     font-size: 3.2rem;
-    font-weight: 500;
-    color: rgba(247,117,36,0.5);
-    border-left: 2px solid rgba(0,0,0,0.5);
-    border-bottom: 2px solid rgba(0,0,0,0.5);
-    cursor: pointer;
+}
+.formControl-Container{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 420px;
+    gap: 15px;
 }
 .formControl{
     margin: 0 24px;
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
 }
-.formControl-User{
-    margin-bottom: 5px;
+.formControl>input{
+    border: none;
+    outline: none;
+    width: 420px;
+    height: 28px;
+    padding: 10px 0;
+    font-size: 2rem;
+    color: rgba(0, 0, 0, 0.5);
+    border-bottom: 1px solid rgba(0, 0, 0, 0.5);
+    background-color: transparent;
+
+    &:first-child{
+        margin-bottom: 40px;
+    }
+}
+.formControl-Remind{
     display: flex;
     align-items: center;
+    justify-content: center;
     gap: 5px;
 }
-.formControl-input{
+.formControl>button{
+    height: 60px;
     width: 100%;
-    padding: 16px;
-    outline: none;
-    border: 1px solid rgba(0,0,0,0.25);
-    box-shadow: 4px 4px 4px rgba(0,0,0,0.25);
-    border-radius: 5px;
-}
-.login-sumbitBtn{
-    margin: 0 24px;
-    padding: 24px 0;
-    background-color: var(--primary-color);
-    color: #fff;
-    filter: drop-shadow(4px 4px 5px rgba(247, 117, 36 , 0.5));
+    background: rgba(0, 0, 0, 0.5);
+    border-radius: 50px;
     border: none;
-    border-radius: 5px;
-    cursor: pointer;
+    font-size: 2.6rem;
+    color: rgba(255, 255, 255, 0.5);
+    
 
     &:hover{
+        cursor: pointer;
         opacity: 0.8;
     }
 }
+.Remind-icon{
+    width: 30px;
+}
 .login-formHelp{
-    margin: 0 24px;
+    width: 100%;
     display: flex;
     justify-content: space-between;
     align-items: center;
+    color: #000;
+    font-size: 1.6rem;
+}
+.login-remember{
+    display: flex;
+    justify-content: center;
 }
 .login-remember>input{
     margin-right: 5px;
     height: 16px;
     width: 16px;
-}
-.login-remember>span{
-    font-size: 2rem;
-    font-weight: 500;
+    accent-color: #000;
 }
 .login-forgot{
-    font-size: 2rem;
-    font-weight: 500;
     cursor: pointer;
 
     &:hover{
         opacity: 0.8;
     }
+}
+.login-FormStyle{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 10px;
+}
+.loginForm-name{
+    font-family: 'Bismarck';
+    font-size: 4rem;
+    color: var(--primary-color);
+    width: 44px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.loginForm-line{
+    width: 180px;
+    border: 1px solid rgba(0, 0, 0, 0.5);
 }
 .login-formRegis{
     display: flex;
     justify-content: center;
     align-items: center;
     gap: 5px;
-    margin-bottom: 16px;
+    margin: 18px 0 32px 0;
 }
 .login-formRegis>span{
-    font-size: 2rem ;
-    font-weight: 500;
-
-
-    &:nth-child(1){
-        color: rgba(247, 117, 36 , 0.75);
-    }
+    font-size: 1.6rem ;
+    color: #000;
 
     &:nth-child(2){
+        text-decoration: underline;
         cursor: pointer;
 
         &:hover{
@@ -188,35 +178,3 @@
         }
     }
 }
-.login-listDev{
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-    color: var(--primary-color);
-    margin-bottom: 36px;
-}
-.itemDev{
-    display: flex;
-    align-items: center;
-    gap: 5px;
-    cursor: pointer;
-
-    &:hover{
-        opacity: 0.8;
-    }
-}
-.loginButton{
-    width: 150px;
-    padding: 15px 25px;
-    border-radius: 5px;
-    color: white;
-    display: flex;
-    align-items: center;
-    font-weight: bold;
-    margin-bottom: 20px;
-    cursor: pointer;
-  }
-
-  .google{
-    background-color: #df4930;
-  }
