--- a/FrontEnd/src/Components/Footer/footer.scss
+++ b/FrontEnd/src/Components/Footer/footer.scss
@@ -39,4 +39,9 @@
     &:nth-child(1), &:nth-child(3){
         margin-bottom: 48px;
     }
+
+    >a{
+        text-decoration: none;
+        color: var(--primary-color);
+    }
 }
