--- a/FrontEnd/src/Components/GlobalStyles/globalStyles.scss
+++ b/FrontEnd/src/Components/GlobalStyles/globalStyles.scss
@@ -1,5 +1,5 @@
 @import 'normalize.css';
-@import url('https://fonts.googleapis.com/css2?family=ABeeZee&family=Raleway:wght@400;500;600;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=ABeeZee&family=Oswald:wght@400;500;600;700&display=swap');
 @import url('https://fonts.cdnfonts.com/css/bismarck');
 :root{
     --primary-color: #DC5B0E;
