--- a/FrontEnd/src/Components/PasswordChange/passwordChange.scss
+++ b/FrontEnd/src/Components/PasswordChange/passwordChange.scss
@@ -25,6 +25,11 @@
     height: 50px;
     font-size: 2.6rem;
     color: rgba(220, 91, 14, 0.6);
+
+    &:hover{
+        cursor: pointer;
+        color: var(--primary-color);
+    }
 }
 .passwordChange-content{
     margin: 90px 100px 0;
@@ -41,6 +46,10 @@
         font-size: 2rem;
         color: #fff;
         border: none;
+        &:hover{
+            cursor: pointer;
+            background-color: var(--primary-color);
+        }
     }
 }
 .passwordChange-boxList{
