--- a/FrontEnd/src/Components/Product/product.scss
+++ b/FrontEnd/src/Components/Product/product.scss
@@ -14,7 +14,8 @@
     margin-bottom: 10px;
 }
 .productItem:hover{
-    box-shadow: 0 1px 20px 0 rgba(0,0,0,0.05);
+    border: 1px solid var(--primary-color);
+    box-shadow: 0px 0px 5px 2px var(--primary-color);
     transform: translateY(-1px);
 }
 .product-img{
@@ -55,6 +56,11 @@
     border-radius: 10px;
     border: none;
     color: #fff;
+
+    &:hover{
+        cursor: pointer;
+        background-color: var(--primary-color);
+    }
 }
 .product-shop{
     display: flex;
