--- a/FrontEnd/src/Components/ProfileInfo/profileInfo.scss
+++ b/FrontEnd/src/Components/ProfileInfo/profileInfo.scss
@@ -36,7 +36,7 @@
 }
 .user-input{
     display: flex;
-    align-items: end;
+    align-items: flex-end;
     justify-content: space-between;
     flex: 1;
     margin-bottom: 48px;
@@ -66,14 +66,6 @@
     padding: 9px 12px;
     width: 238px;
 }
-.user-birth>input 
-::-webkit-datetime-edit-fields-wrapper { background: silver; }
-::-webkit-datetime-edit-text { color: red; padding: 0 0.3em; }
-::-webkit-datetime-edit-month-field { color: blue; }
-::-webkit-datetime-edit-day-field { color: green; }
-::-webkit-datetime-edit-year-field { color: purple; }
-::-webkit-inner-spin-button { display: none; }
-::-webkit-calendar-picker-indicator { display: none;}
 .user-birth>input{
     border: none;
     outline: none;
@@ -102,4 +94,9 @@
     border-radius: 10px;    
     font-size: 2.6rem;
     color: rgba(220, 91, 14, 0.6);
+
+    &:hover{
+        cursor: pointer;
+        color: var(--primary-color);
+    }
 }
