--- a/FrontEnd/src/Components/Seller/seller.scss
+++ b/FrontEnd/src/Components/Seller/seller.scss
@@ -47,6 +47,10 @@
     justify-content: center;
     gap: 5px;
     border: 1px solid var(--primary-color);
+    &:hover{
+        cursor: pointer;
+        opacity: 0.8;
+    }
 
     &:first-child{
 
