--- a/FrontEnd/src/Pages/Register/register.scss
+++ b/FrontEnd/src/Pages/Register/register.scss
@@ -105,8 +105,7 @@
     border-radius: 50px;
     border: none;
     font-size: 2.6rem;
-    color: rgba(255, 255, 255, 0.5);
-    
+    color: #fff;
 
     &:hover{
         cursor: pointer;
