--- a/FrontEnd/src/Components/Category/category.scss
+++ b/FrontEnd/src/Components/Category/category.scss
@@ -15,9 +15,10 @@
     margin-bottom: 10px;
 
     &:hover{
-        border: 1px solid var(--primary-color);
         box-shadow: 0px 0px 5px 2px var(--primary-color);
         cursor: pointer;
+        transform: translateY(-1px);
+
     }
 }
 .cateItem-Content{
