--- a/FrontEnd/src/Components/GlobalStyles/globalStyles.scss
+++ b/FrontEnd/src/Components/GlobalStyles/globalStyles.scss
@@ -1,5 +1,5 @@
 @import 'normalize.css';
-@import url('https://fonts.googleapis.com/css2?family=ABeeZee&family=Oswald:wght@400;500;600;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700&family=Oswald:wght@400;500;600;700&display=swap');
 @import url('https://fonts.cdnfonts.com/css/bismarck');
 :root{
     --primary-color: #DC5B0E;
@@ -18,6 +18,28 @@ html{
 }
 
 body{
-    font-family: 'ABeeZee';
+    font-family: 'Montserrat' !important;
     font-size: 1.6rem;
+}
+
+hr{
+    border-top: 1px solid var(--primary-color);
+    width: 1200px;
+    margin-top: 46px;
+}
+
+.active{
+    color: var(--primary-color) !important;
+}
+.active-border{
+    border: 1px solid var(--primary-color) !important;
+}
+.active__underline::after {
+    content: "";
+    display: block;
+    margin-top: 16px;
+    border-bottom: 2px solid var(--primary-color);
+}
+.tab-hide{
+    display: none;
 }
