--- a/FrontEnd/src/Components/Product/product.scss
+++ b/FrontEnd/src/Components/Product/product.scss
@@ -12,9 +12,10 @@
     border-radius: 10px;
     transition: transform linear 0.1s;
     margin-bottom: 10px;
+    min-height: 378px;
+    min-width: 292px;
 }
 .productItem:hover{
-    border: 1px solid var(--primary-color);
     box-shadow: 0px 0px 5px 2px var(--primary-color);
     transform: translateY(-1px);
 }
@@ -22,7 +23,8 @@
     width: 260px;
     height: 190px;
     object-fit: cover;
-    margin: 10px;
+    margin: 10px auto;
+    display: block;
 }
 .product-title{
     font-size: 1.6rem;
