--- a/FrontEnd/src/Components/ProfileAddress/profileAddress.scss
+++ b/FrontEnd/src/Components/ProfileAddress/profileAddress.scss
@@ -4,7 +4,7 @@
     background-color: #FFFFFF;
     box-shadow: 0px 0px 5px var(--primary-color);
     border-radius: 10px;
-    height: 700px;
+    min-height: 700px;
 }
 .profileAddress-container{
     padding: 24px;
@@ -115,6 +115,9 @@
     position: relative;
 }
 .addressModal-boxList{
+    >span{
+        z-index: 1;
+    }
     
     &:nth-child(1)>span{
         position: absolute;
@@ -132,13 +135,31 @@
     }
     &:nth-child(3)>span{
         position: absolute;
-        transform: translateX(5%) translateY(-36%);
+        transform: translateX(34%) translateY(-36%);
         background-color: #fff;
         padding: 0 4px;
     }
     &:nth-child(4)>span{
         position: absolute;
         transform: translateX(18%) translateY(-36%);
+        background-color: #fff;
+        padding: 0 4px;
+    }
+    &:nth-child(5)>span{
+        position: absolute;
+        transform: translateX(34%) translateY(-36%);
+        background-color: #fff;
+        padding: 0 4px;
+    }
+    &:nth-child(6)>span{
+        position: absolute;
+        transform: translateX(24%) translateY(-36%);
+        background-color: #fff;
+        padding: 0 4px;
+    }
+    &:nth-child(7)>span{
+        position: absolute;
+        transform: translateX(16%) translateY(-36%);
         background-color: #fff;
         padding: 0 4px;
     }
@@ -149,26 +170,26 @@
     color: rgba(0, 0, 0, 0.5);
 }
 .addressModal-boxList{
-
-    &:nth-child(3)>input{
-        width: 552px;
+    >input,>select{
+        background-color: #fff;
+        border: 1px solid var(--sub-color);
+        box-shadow: inset 0px 0px 4px rgba(220, 91, 14, 0.5);
+        border-radius: 5px;
+        width: 260px;
+        height: 50px;
+        padding: 4px 12px;
+        font-size: 2rem;
+        outline-color: var(--primary-color);
+    }
+    &:nth-child(3),&:nth-child(7),&:nth-child(5),&:nth-child(6),&:nth-child(4){
+        >input{
+            width: 552px;
+        }
+        >select{
+            width: 552px;
+        }
     }
 
-    &:nth-child(4)>input{
-        width: 552px;
-        min-height: 70px;
-    }
-}
-.addressModal-boxList>input{
-    background-color: #fff;
-    border: 1px solid var(--sub-color);
-    box-shadow: inset 0px 0px 4px rgba(220, 91, 14, 0.5);
-    border-radius: 5px;
-    width: 260px;
-    height: 50px;
-    padding: 4px 12px;
-    font-size: 2rem;
-    outline-color: var(--primary-color);
 }
 .addressModal-btn{
     display: flex;
