--- a/FrontEnd/src/Components/ProfileAddress/profileAddress.scss
+++ b/FrontEnd/src/Components/ProfileAddress/profileAddress.scss
@@ -4,7 +4,7 @@
     background-color: #FFFFFF;
     box-shadow: 0px 0px 5px var(--primary-color);
     border-radius: 10px;
-    height: 700px;
+    min-height: 700px;
 }
 .profileAddress-container{
     padding: 24px;
