--- a/FrontEnd/src/Components/Navbar/navbar.scss
+++ b/FrontEnd/src/Components/Navbar/navbar.scss
@@ -59,28 +59,31 @@
         top : 50%;
         transform: translateY(-50%);
 }
+.navList--space::after{
+    content: "";
+        display: block;
+        position: absolute;
+        height: 24px;
+        border-right: 2px solid var(--primary-color);
+        right: 26px;
+        top : 50%;
+        transform: translateY(-50%);
+}
 .navIcon{
     width: 33px;
     cursor: pointer;
+    position: relative;
+    
 }
 .navList-money{
     display: flex;
     align-items: center;
     gap: 8px;
+    position: relative;
     >span{
         font-size: 1.8rem;
     }
 
-    &::after{
-        content: "";
-        display: block;
-        position: absolute;
-        height: 24px;
-        border-right: 2px solid var(--primary-color);
-        left: 150px;
-        top : 50%;
-        transform: translateY(-50%);
-    }
 }
 .navList-user{
     display: flex;
