--- a/FrontEnd/src/Components/GlobalStyles/globalStyles.scss
+++ b/FrontEnd/src/Components/GlobalStyles/globalStyles.scss
@@ -43,3 +43,9 @@ hr{
 .tab-hide{
     display: none;
 }
+
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
