--- a/FrontEnd/src/Components/ProfileShop/profileShop.scss
+++ b/FrontEnd/src/Components/ProfileShop/profileShop.scss
@@ -82,9 +82,36 @@
         font-size: 1.8rem;
     }
 }
-.profleShop-productList{
+.profileShop-productBox{
     flex: 2;
     width: 100%;
+    >input{
+        font-size: 1.8rem;
+        padding: 10px;
+        background: #FFFFFF;
+        border: 1px solid var(--primary-color);
+        border-radius: 5px;
+        outline: none;
+    }
+    >button{
+        font-size: 1.8rem;
+        padding: 10px;
+        background: var(--primary-color);
+        border: 1px solid var(--primary-color);
+        border-radius: 5px;
+        color: #fff;
+        margin-left: 4px;
+        &:hover{
+            cursor: pointer;
+            opacity: 0.8;
+        }
+    }
+}
+.profleShop-productList{
+    &:nth-of-type(1){
+        flex: 2;
+        width: 100%;
+    }
     >span{
         display: inline-flex;
         align-items: center;
@@ -98,17 +125,6 @@
         margin-right: 20px;
         &:hover{
             cursor: pointer;
-        }
-
-        &:last-child{
-            margin: 0;
-            background: #FFFFFF;
-            border: 1px dashed rgba(0, 0, 0, 0.5);
-            border-radius: 5px;
-            &:hover{
-                border: 1px dashed var(--primary-color);
-                color: var(--primary-color);
-            }
         }
     }
 }
