--- a/FrontEnd/src/Components/Navbar/navbar.scss
+++ b/FrontEnd/src/Components/Navbar/navbar.scss
@@ -94,6 +94,7 @@
     gap: 5px;
     align-items: center;
     font-size: 1.8rem;
+    position: relative;
     >img{
         width: 25px;
         height: 25px;
@@ -103,6 +104,53 @@
     }
     &:hover{
         cursor: pointer;
-        opacity: 0.8;
+        .navList-userMenu{
+            display: block;
+        }
+    }
+}
+
+.navList-userMenu{
+    position: absolute;
+    z-index: 9999;
+    padding-left : 0px;
+    top: 120%;
+    right: 0;
+    width: 200px;
+    background-color: var(--sub-color);
+    border-radius: 5px;
+    list-style: none;
+    box-shadow: 0 1px 1px #e0e0e0;
+    display: none;
+    color: #fff;
+
+    >span{
+        font-size: 1.4rem;
+        display: block;
+        padding: 8px 16px;
+        &:hover{
+            cursor: pointer;
+            background-color: var(--primary-color);
+        }
+    }
+
+    &::before{
+        content: "";
+        border-width: 20px 27px;
+        border-style: solid;
+        border-color: transparent transparent var(--sub-color) transparent;
+        position: absolute;
+        right: 0px;
+        top: -29px;
+        z-index: -1;
+    }
+    &::after{
+        content: "";
+        position: absolute;
+        display: block;
+        top: -8px;
+        right: 0;
+        width: 56%;
+        height: 8px;
     }
 }
