--- a/FrontEnd/src/Pages/NewProduct/newProduct.scss
+++ b/FrontEnd/src/Pages/NewProduct/newProduct.scss
@@ -80,7 +80,7 @@
         }
     }
 }
-.newProduct-size{
+.newProduct-specialized{
     display: flex;
     align-items: center;
     gap: 20px;
@@ -91,34 +91,7 @@
         
     }
 }
-.newProduct-sizeContent{
-    flex: 2;
-    >input{
-        width: 300px;
-        background: #fff;
-        border: 1px solid var(--primary-color);
-        border-radius: 5px;
-        overflow: hidden;
-        padding: 10px;
-        font-size: 1.8rem;
-        outline: none;
-    }
-    >button{
-        padding: 10px;
-        font-size: 1.8rem;
-        background: var(--primary-color);
-        border: 1px solid var(--primary-color);
-        border-radius: 5px;
-        color: #fff;
-        margin-left: 8px;
-
-        &:hover{
-            cursor: pointer;
-            opacity: 0.8;
-        }
-    }
-}
-.newProduct-sizeBox{
+.newProduct-specializedBox{
     &:nth-of-type(1){
         flex: 2;
     }
@@ -151,57 +124,86 @@
     }
 }
 
-.newProduct-quantity{
+.newProduct-classify{
     display: flex;
-    align-items: center;
     gap: 20px;
-
     >span{
         flex: 0.49;
         text-align: right;
         
     }
 }
-.newProduct-quantityInput{
+.newProduct-classifyContent{
     flex: 2;
-    >input{
-        width: 300px;
-        background: #fff;
-        border: 1px solid var(--primary-color);
+    display: flex;
+    gap: 20px;
+
+    >button{
+        width: 130px;
+        background: #FFFFFF;
+        border: 1px dashed rgba(0, 0, 0, 0.5);
         border-radius: 5px;
-        overflow: hidden;
-        padding: 10px;
-        font-size: 1.8rem;
-        outline: none;
+        color: rgba(0, 0, 0, 0.5);
+        &:hover{
+            cursor: pointer;
+            border: 1px dashed var(--primary-color);
+            color: var(--primary-color);
+        }
     }
 }
-.newProduct-price{
+.product-classifyBox{
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+    min-width: 300px;
+}
+.product-classifyList{
     display: flex;
     align-items: center;
     gap: 20px;
     >span{
-        flex: 0.49;
-        text-align: right;
+        flex: 1;
+        font-size: 1.8rem;
+        font-family: 'Oswald';
+    }
+    &:last-child{
+        .product-classifyItem{
+
+            color: var(--primary-color);
+        }
+    }
+    &:first-child{
+        .product-classifyItem{
+            position: relative;
+        }
+    }
+
+}
+
+.product-classifyItem{
+    flex: 1.5;
+    >span{
+        display: inline-flex;
+        width: 120px;
+        height: 40px;
+        background: #fff;
+        border: 1px solid #DC5B0E;
+        border-radius: 5px; 
+        align-items: center;
+        justify-content: center;
+        gap: 5px;
+        font-size: 1.8rem;
     }
 }
-.newProduct-priceBox{
-    flex: 2;
-}
-.newProduct-priceInput{
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    width: 300px;
-    background: #fff;
-    border: 1px solid var(--primary-color);
-    border-radius: 5px;
-    overflow: hidden;
-    padding: 0 10px;
-    >input{
-        font-size: 1.8rem;
-        border: none;
-        outline: none;
-        padding: 10px 0;
+.product-classifyIcon{
+    position: absolute;
+    top: -8px;
+    transform: translateX(-10px);
+    color: var(--primary-color);
+    background-color: #fff;
+    &:hover{
+        cursor: pointer;
+        opacity: 0.8;
     }
 }
 .newProduct-desc{
