fix size modal-classify

--- a/FrontEnd/src/Components/Classify/classify.scss
+++ b/FrontEnd/src/Components/Classify/classify.scss
@@ -28,6 +28,12 @@
         font-family: 'Oswald';
     }
 }
+.modal-classifyBox{
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+    width: 100%;
+}
 .product-classifyList{
     >input{
         flex: 3;
