--- a/FrontEnd/src/Components/CartProperty/cartProperty.scss
+++ b/FrontEnd/src/Components/CartProperty/cartProperty.scss
@@ -80,6 +80,7 @@
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+    width: 100%;
 }
 .cart-content{
     flex: 3;
