--- a/FrontEnd/src/Components/Header/header.scss
+++ b/FrontEnd/src/Components/Header/header.scss
@@ -135,6 +135,7 @@
         font-size: 1.4rem;
         text-align: center;
         line-height: 24px;
-        border: 1px solid #000;
+        border: 1px solid var(--primary-color);
+        color: var(--primary-color);
     }
 }
