--- a/FrontEnd/src/Components/GlobalStyles/globalStyles.scss
+++ b/FrontEnd/src/Components/GlobalStyles/globalStyles.scss
@@ -49,3 +49,14 @@ input::-webkit-inner-spin-button {
   -webkit-appearance: none;
   margin: 0;
 }
+
+@keyframes btn-glide {
+    from{
+        opacity: 0;
+        transform: translateY(-140px);
+    }
+    to{
+        opacity: 1;
+        transform: translateY(0);
+    }
+}
