--- a/admin/src/Components/AdminHome/adminHome.scss
+++ b/admin/src/Components/AdminHome/adminHome.scss
@@ -1,11 +1,14 @@
+
 .adminHome{
     display: flex;
+    width: 100%;
 }
 .adminHome-navbar{
     margin: 20px;
     display: flex;
     flex-direction: column;
     gap: 12px;
+    // flex: 1;
 
     >span{
         display: flex;
@@ -37,6 +40,6 @@
     }
 }
 .adminHome-content{
-    margin: 40px 40px 64px;
+    margin: 20px;
     flex: 1;
 }
